fix(left-sidebar): align collapsed ol with li

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -28,7 +28,7 @@
   }
 
   details ol {
-    padding-left: 0.75em;
+    padding-left: calc(0.75em + 2px); /* 2px to align with regular li. */
   }
 
   li {
